keycloak-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert --file=docker-compose.yml
    kompose.version: 1.15.0 (e3cd4d4)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
      - env:
        - name: DB_ADDR
          # value: postgres
          value: "172.17.0.4"
        - name: DB_DATABASE
          value: keycloak
        - name: DB_PASSWORD
          value: password
        - name: DB_USER
          value: keycloak
        - name: DB_VENDOR
          value: POSTGRES
        - name: KEYCLOAK_PASSWORD
          value: Pa55w0rd
        - name: KEYCLOAK_USER
          value: admin
        image: jboss/keycloak
        name: keycloak
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
