postgres-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert --file=docker-compose.yml
    kompose.version: 1.15.0 (e3cd4d4)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
      restartPolicy: Always
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-data
status: {}
