postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert --file=docker-compose.yml
    kompose.version: 1.15.0 (e3cd4d4)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  ports:
  - name: "5432"
    port: 5432
    # targetPort: 5432
  selector:
    io.kompose.service: postgres
status:
  # loadBalancer: {}
